--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
         'libs/bootstrap-datepicker/bootstrap-datepicker.js',
         'libs/bootstrap-timepicker/bootstrap-timepicker.js',
+        'libs/notifier/notifier.js',
 
         //'libs/daterangepicker/1.0/daterangepicker.js',
         
@@ -95,6 +96,8 @@
 
   </head>
   <body>
+
+    <div class='notifications bottom-right'></div>
 
     <div class="navbar navbar-inverse navbar-fixed-top" bs-navbar>
       <div class="navbar-inner">
@@ -138,9 +141,6 @@
       </footer>
 
     </div>
-
-
-
 
   </body>
 </html>
