--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <li data-match-route="/planboard"><a href="#planboard">Planboard</a></li>
               <li data-match-route="/messages"><a href="#messages">Messages</a></li>
               <li data-match-route="/groups"><a href="#groups">Groups</a></li>
-              <li data-match-route="/profile"><a href="#profile">Profile</a></li>
+              <li data-match-route="/profile/view/{{user.uuid}}"><a href="#profile/view/{{user.uuid}}">Profile</a></li>
               <li data-match-route="/settings"><a href="#settings">Settings</a></li>
             </ul>
           </div>
@@ -80,7 +80,7 @@
                   ng-click="saveSession(sessionID)">Save SessionID</button>
           <button type="button" 
                   class="btn btn-warning"
-                  ng-click="clearLocalSlots()">Clear Local Slots</button>
+                  ng-click="clearLocalSlots()">Clear LocalCache</button>
         </form>
         </div>
       </div>
