--- a/index.html
+++ b/index.html
@@ -16,40 +16,16 @@
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="ico/favicon.ico">
     
-<!--     
+    <!--     
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png"> -->
+    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+    -->
     
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
     <link rel="stylesheet" href="css/custom.css" type="text/css">
-
-    <script src="libs/jquery/jquery-1.8.3.min.js"></script>
-    <script src="libs/date/1.0/date.js"></script>
-    <script src="libs/angular/angular.min.js"></script>
-    <script src="libs/angular/angular-resource.min.js"></script>
-    <script src="libs/bootstrap/bootstrap.min.js"></script>
-    <script src="libs/chaps/timeline/2.4.0/timeline.js"></script>
-    <script src="libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
-    <script src="libs/bootstrap-timepicker/bootstrap-timepicker.js"></script>
-    <script src="libs/notifier/notifier.js"></script>
-    <script src="js/databank.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers/controllers.js"></script>
-    <script src="js/controllers/login.js"></script>
-    <script src="js/controllers/dashboard.js"></script>
-    <script src="js/controllers/planboard.js"></script>
-    <script src="js/controllers/messages.js"></script>
-    <script src="js/controllers/groups.js"></script>
-    <script src="js/controllers/profile.js"></script>
-    <script src="js/controllers/settings.js"></script>
-    <script src="js/services/services.js"></script>
-    <script src="js/filters/filters.js"></script>
-    <script src="js/directives/directives.js"></script>
-    <script src="libs/angular-strap/0.5.10/angular-strap.min.js"></script>
 
   </head>
   <body>
@@ -61,29 +37,60 @@
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></a> 
           <a class="brand" href="#">WebPaige</a>
+
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li data-match-route="/dashboard"><a href="#dashboard">Dashboard</a></li>
-              <li data-match-route="/planboard"><a href="#planboard">Planboard</a></li>
-              <li data-match-route="/messages"><a href="#messages">Messages</a></li>
-              <li data-match-route="/groups"><a href="#groups">Groups</a></li>
-              <li data-match-route="/profile/view/{{user.uuid}}"><a href="#profile/{{user.uuid}}/view">Profile</a></li>
-              <li data-match-route="/settings"><a href="#settings">Settings</a></li>
+              <li data-match-route="/dashboard">
+                <a href="#dashboard">Dashboard</a>
+              </li>
+              <li data-match-route="/planboard">
+                <a href="#planboard">Planboard</a>
+              </li>
+              <li data-match-route="/messages">
+                <a href="#messages">Messages</a>
+              </li>
+              <li data-match-route="/groups">
+                <a href="#groups">Groups</a>
+              </li>
+              <!--               
+              <li data-match-route="/profile/view/{{user.uuid}}">
+                <a href="#profile/{{user.uuid}}/view">Profile</a>
+              </li>
+              <li data-match-route="/settings">
+                <a href="#settings">Settings</a>
+              </li>
+              -->
             </ul>
           </div>
-        <form class="navbar-form pull-right">
-          <input  type="text" 
-                  class="span2"
-                  ng-model="sessionID">
-          <button type="button" 
-                  class="btn"
-                  ng-click="saveSession(sessionID)">Save SessionID</button>
-          <button type="button" 
-                  class="btn btn-warning"
-                  ng-click="clearLocalSlots()">Clear LocalCache</button>
-        </form>
+
+          <div class="btn-group pull-right" style="margin-left: 10px;">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+              {{ user.name }} <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#profile/{{user.uuid}}/view"><i class="icon-user"></i> Profile</a></li>
+              <li><a href="#settings"><i class="icon-cog"></i> Settings</a></li>
+              <li class="divider"></li>
+              <li><a href="#logout"><i class="icon-off"></i> Logout</a></li>
+            </ul>
+          </div>
+
+          <!--
+          <form class="navbar-form pull-right">
+            <input  type="text" 
+                    class="span1"
+                    ng-model="sessionID">
+            <button type="button" 
+                    class="btn"
+                    ng-click="saveSession(sessionID)">Save SessionID</button>
+            <button type="button" 
+                    class="btn btn-warning"
+                    ng-click="clearLocalSlots()">Clear LocalCache</button>
+          </form>
+          -->
+
         </div>
       </div>
+
     </div>
 
     <div class="container">
@@ -95,9 +102,39 @@
             <div class="bar" style="width: 100%;"></div>
         </div>
         <span class="muted" style="margin-left: 10px; font-size: 12px">{{alertMessage}}</span>
+        <button type="button" 
+                    class="btn btn-danger btn-mini pull-right"
+                    ng-click="clearLocalSlots()">Clear LocalCache</button>
       </footer>
 
     </div>
+
+    <script src="libs/jquery/jquery-1.8.3.min.js"></script>
+    <script src="libs/date/1.0/date.js"></script>
+    <script src="libs/angular/angular.min.js"></script>
+    <script src="libs/angular/angular-resource.min.js"></script>
+    <script src="libs/bootstrap/bootstrap.min.js"></script>
+    <script src="libs/chaps/timeline/2.4.0/timeline.js"></script>
+    <script src="libs/underscore/1.4.3/underscore-min.js"></script>
+    <script src="libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+    <script src="libs/bootstrap-timepicker/bootstrap-timepicker.js"></script>
+    <script src="libs/notifier/notifier.js"></script>
+    <script src="js/databank.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/controllers/controllers.js"></script>
+    <script src="js/controllers/login.js"></script>
+    <script src="js/controllers/logout.js"></script>
+    <script src="js/controllers/dashboard.js"></script>
+    <script src="js/controllers/planboard.js"></script>
+    <script src="js/controllers/messages.js"></script>
+    <script src="js/controllers/groups.js"></script>
+    <script src="js/controllers/profile.js"></script>
+    <script src="js/controllers/settings.js"></script>
+    <script src="js/services/services.js"></script>
+    <script src="js/filters/filters.js"></script>
+    <script src="js/directives/directives.js"></script>
+    <script src="libs/angular-strap/0.5.10/angular-strap.min.js"></script>
 
   </body>
 </html>
