--- a/logout.html
+++ b/logout.html
@@ -2,7 +2,7 @@
 <head>
 	<title></title>
 	<script type="text/javascript">
-		document.cookie = "ask=''; expires=Thu, 01-Jan-1970 00:00:01 GMT";
+		document.cookie = "WebPaige.session=''; expires=Thu, 01-Jan-1970 00:00:01 GMT";
 		window.location = "index.html";
 	</script>
 </head>
