member count, no members and tab view gefixed

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         </div>
         <span class="muted" style="margin-left: 10px; font-size: 12px">{{alertMessage}}</span>
         <button type="button" 
-                    class="btn btn-danger btn-mini pull-right"
-                    ng-click="clearLocalSlots()">Clear LocalCache</button>
+                    class="btn btn-small btn-danger pull-right"
+                    ng-click="clearLocalSlots()"><i class="icon-trash icon-white"></i> Clear LocalCache</button>
       </footer>
 
     </div>
