--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
+    <link rel="stylesheet" href="libs/chosen/chosen.css">
     <link rel="stylesheet" href="css/custom.css" type="text/css">
 
   </head>
@@ -110,6 +111,7 @@
     </div>
 
     <script src="libs/jquery/jquery-1.8.3.min.js"></script>
+    <script src="libs/chosen/chosen.jquery.min.js"></script>
     <script src="libs/date/1.0/date.js"></script>
     <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular/angular-resource.min.js"></script>
@@ -130,9 +132,9 @@
     <script src="js/controllers/groups.js"></script>
     <script src="js/controllers/profile.js"></script>
     <script src="js/controllers/settings.js"></script>
+    <script src="js/directives/directives.js"></script>
     <script src="js/services/services.js"></script>
     <script src="js/filters/filters.js"></script>
-    <script src="js/directives/directives.js"></script>
     <script src="libs/angular-strap/0.5.10/angular-strap.min.js"></script>
 
   </body>
