css changes for messages view

--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 
         <div ng-view></div>
 
-      </div><!-- end container -->
+      </div><!-- end content -->
 
       <div id="push"></div>
       
     </div><!-- end wrap -->
 
 
-      <footer>
+    <footer>
         <div class="footcon">
           <div class="progress span1" ng-class="active" ng-cloak style="margin-left:0;">
               <div class="bar" style="width: 100%;"></div>
