dateranger added, not fully functional

--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
 
     <script src="libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
     <script src="libs/bootstrap-timepicker/bootstrap-timepicker.js"></script>
+
+    <script src="libs/daterangepicker/daterangepicker.js"></script>
+    <script src="libs/daterangepicker/sugar.min.js"></script>
+
     <script src="libs/notifier/notifier.js"></script>
 
     <script src="js/databank.js"></script>
