daterangepicker directive made

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <script src="libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
     <script src="libs/bootstrap-timepicker/bootstrap-timepicker.js"></script>
 
-    <script src="libs/daterangepicker/daterangepicker.js"></script>
+    <script src="libs/daterangepicker/1.0.1/daterangepicker.js"></script>
     <script src="libs/daterangepicker/sugar.min.js"></script>
 
     <script src="libs/notifier/notifier.js"></script>
