--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
 
     <script src="js/controllers/login.js"></script>
     <script src="js/controllers/dashboard.js"></script>
+
     <script src="js/controllers/planboard.js"></script>
+    <script src="js/models/planboard.js"></script>
+
     <script src="js/controllers/messages.js"></script>
     <script src="js/controllers/groups.js"></script>
     <script src="js/controllers/profile.js"></script>
