url mapping for timeline is removed & before and after improved

--- a/index copy.html
+++ b/index copy.html
@@ -46,7 +46,7 @@
                   <a href="#dashboard">Dashboard</a>
                 </li>
                 <li data-match-route="/planboard">
-                  <a href="#planboard">Planboard</a>
+                  <a href="#planboard/{{layouts}}/{{firstGroup}}/{{currentDivision}}/{{currentMonth}}">Planboard</a>
                 </li>
                 <li data-match-route="/messages">
                   <a href="#messages">Messages</a>
