--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#planboard">Planboard</a>
               </li>
               <li data-match-route="/messages">
-                <a href="#messages">Messages <span class="badge badge-success">2</span></a>
+                <a href="#messages">Messages <span class="badge badge-success">{{app.unreadMessages}}</span></a>
               </li>
               <li data-match-route="/groups">
                 <a href="#groups">Groups</a>
@@ -63,7 +63,8 @@
             <!-- user menu -->
             <ul class="nav pull-right">
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> Cengiz Ulusoy <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <i class="icon-user icon-white"></i> {{app.resources.name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="#profile/{{user.uuid}}/view"><i class="icon-user"></i> Profile</a></li>
                   <li><a href="#settings"><i class="icon-cog"></i> Settings</a></li>
