not working attempt on using plugin 'meny' for knrm users for testing

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
     <script src="libs/bootstrap/bootstrap.min.js"></script>
     <script src="libs/chaps/timeline/2.4.0/timeline.js"></script>
 
+    <!-- <script src="libs/meny/1.2/meny.min.js"></script> -->
+
     <script src="libs/underscore/1.4.3/underscore-min.js"></script>
 
     <script src="libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
