download app button for intern pages

--- a/index.html
+++ b/index.html
@@ -112,6 +112,16 @@
 
         <div id="copyrights">
           <span class="muted"><small>Ask Community Systems, 2013<br><i>WebPaige v2.0.0</i></small></span>
+
+          <!-- download mobile app -->
+          <div id="download-footer">
+            <button class="btn btn-success" type="submit">
+              <span class="entypo">&#128241;</span>
+              <span class="msg">Download Mobile App</span>
+            </button>
+          </div>
+          <!-- end download mobile app -->
+
         </div>
 
         <p class="muted" ng-show="loading">
