Message bubble not correctly displayed.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#planboard">Planboard</a>
               </li>
               <li data-match-route="/messages">
-                <a href="#messages">Messages <span class="badge badge-success">{{app.unreadMessages}}</span></a>
+                <a href="#messages">Messages <span id="msgBubble" class="badge badge-success">{{app.unreadMessages}}</span></a>
               </li>
               <li data-match-route="/groups">
                 <a href="#groups">Groups</a>
