--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-user icon-white"></i> {{app.resources.name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#profile/{{user.uuid}}/view"><i class="icon-user"></i> Profile</a></li>
+                  <li><a href="#profile/{{app.resources.uuid}}/view"><i class="icon-user"></i> Profile</a></li>
                   <li><a href="#settings"><i class="icon-cog"></i> Settings</a></li>
                   <li class="divider"></li>
                   <li><a href="#logout"><i class="icon-off"></i> Logout</a></li>
