url mapping intorduced to groups&members

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#messages">Messages <span id="msgBubble" class="badge badge-success">{{app.unreadMessages}}</span></a>
               </li>
               <li data-match-route="/groups">
-                <a href="#groups">Groups</a>
+                <a href="#groups?uuid=4a1a3392-7611-1030-a3ab-005056bc7e66#view">Groups</a>
               </li>
             </ul>
             <!-- end main nav -->
@@ -63,7 +63,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-user icon-white"></i> {{app.resources.name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#profile/{{app.resources.uuid}}#view"><i class="icon-user"></i> Profile</a></li>
+                  <li><a href="#profile/{{app.resources.uuid}}#profile"><i class="icon-user"></i> Profile</a></li>
                   <li><a href="#settings"><i class="icon-cog"></i> Settings</a></li>
                   <li class="divider"></li>
                   <li><a href="#logout"><i class="icon-off"></i> Logout</a></li>
