no params fix for groups url & some other fixings in other controllers

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a href="#messages">Messages <span id="msgBubble" class="badge badge-success">{{app.unreadMessages}}</span></a>
               </li>
               <li data-match-route="/groups">
-                <a href="#groups?uuid=4a1a3392-7611-1030-a3ab-005056bc7e66#view">Groups</a>
+                <a href="#groups">Groups</a>
               </li>
             </ul>
             <!-- end main nav -->
