solved issue of showing 0 by unreadMessages counter

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <li data-match-route="/messages">
                 <a href="#messages">Messages 
                   <!-- unread messages -->
-                  <span ng-show="(app.unreadMessages.length > 0)" class="badge badge-success">
+                  <span ng-show="(app.unreadMessages > 0)" class="badge badge-success">
                     {{app.unreadMessages}}
                   </span>
                   <!-- end unread messages -->
