--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
     </div>
     <!-- end loading -->
 
+
+
+    <!-- notifications -->
+<!--     <div class="alert alert-success" style="position: absolute; top: 110px; left: 50%; width: 300px; margin-left: -175px;">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      Best check yo self, you.
+    </div> -->
+    <!-- end notifications -->
+
     
     <!-- wrap -->
     <div id="wrap">
