--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@
 
           <!-- download mobile app -->
           <div id="download-footer">
-            <button class="btn btn-success" type="submit">
-              <span class="entypo">&#128241;</span>
-              <span class="msg">Download Mobile App</span>
+            <button class="btn btn-success btn-large" type="button">
+              <!-- <span class="entypo">&#128241;</span> -->
+              <!-- <i class="icon-download icon-white"></i> -->
+              Download Mobile App
             </button>
           </div>
           <!-- end download mobile app -->
