setup for language selection & multilanguage functionality and configuration

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
     <!-- end footer -->
 
 
+    <script src="js/local/language.js"></script>
+
     <script src="libs/jquery/jquery-1.8.3.min.js"></script>
     <script src="libs/chosen/chosen.jquery.min.js"></script>
     <script src="libs/date/1.0/date.js"></script>
