--- a/war/index.html
+++ b/war/index.html
@@ -172,14 +172,13 @@
     </div>
     <!-- end footer -->
 
-
     <script src="js/local/language.js"></script>
 
-    <script src="libs/jquery/jquery-1.8.3.min.js"></script>
+    <script src="libs/jquery/1.8.3/jquery-1.8.3.js"></script>
     <script src="libs/chosen/chosen.jquery.min.js"></script>
     <script src="libs/date/1.0/date.js"></script>
-    <script src="libs/angular/angular.min.js"></script>
-    <script src="libs/angular/angular-resource.min.js"></script>
+    <script src="libs/angular/angular.js"></script>
+    <script src="libs/angular/angular-resource.js"></script>
     <script src="libs/bootstrap/bootstrap.js"></script>
 
     <!-- Either integrate angular-underscore library or don't use underscore in login -->
