--- a/war/index.html
+++ b/war/index.html
@@ -174,10 +174,10 @@
 
     <script src="js/local/language.js"></script>
 
-    <script src="libs/jquery/1.8.3/jquery-1.8.3.js"></script>
+    <script src="libs/jquery/1.8.3/jquery-1.8.3.min.js"></script>
     <script src="libs/chosen/chosen.jquery.min.js"></script>
     <script src="libs/date/1.0/date.js"></script>
-    <script src="libs/angular/angular.js"></script>
+    <script src="libs/angular/angular.min.js"></script>
     <script src="libs/angular/angular-resource.js"></script>
     <script src="libs/bootstrap/bootstrap.js"></script>
 
