ie6 & ie7 blocking

--- a/war/index.html
+++ b/war/index.html
@@ -42,6 +42,7 @@
     <!-- ie6 & ie7 -->
     <div id="browser-not-compatible">
       <span class="entypo">&#128712;</span>
+      <br><br><br><br>
       <h2>Helaas!</h2>
       <h4>Deze browser wordt niet ondersteund. Waroom niet?</h4>
       <p>Deze web applicatie is gebaseerd op de nieuwste technologie. Daardoor werkt deze web applicatie nog niet op alle browsers optimaal. Namelijk in oude browsers.</p><br>
@@ -182,9 +183,10 @@
 
     <script src="js/local/language.js"></script>
 
+    <!-- jquery -->
     <script src="libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
-    <!-- browser detection -->
-    <script src="libs/jquery/1.9.1/jquery-browser.js"></script>
+    <script src="libs/jquery/jquery-browser.js"></script>
+    <script src="libs/jquery/jquery-custom.js"></script>
 
     <!--[if gt IE 7]><!-->
     <script src="libs/chosen/chosen.jquery.min.js"></script>
