raphael libs are organized

--- a/war/index.html
+++ b/war/index.html
@@ -247,9 +247,11 @@
       <script src="libs/angular-strap/0.7.0/angular-strap.min.js"></script>
 
       <!-- raphael -->
-      <script src="libs/raphael/0.5.1/raphael-min.js"></script>
-      <script src="libs/raphael/0.5.1/g.raphael-min.js"></script>
-      <script src="libs/raphael/0.5.1/g.pie-min.js"></script>
+      <script src="libs/raphael/2.1.0/raphael-min.js"></script>
+      
+      <!-- g-raphael -->
+      <script src="libs/g-raphael/0.5.1/g.raphael-min.js"></script>
+      <script src="libs/g-raphael/0.5.1/g.pie-min.js"></script>
     <!--<![endif]-->
 
   </body>
