sugar lib is organized

--- a/war/index.html
+++ b/war/index.html
@@ -210,7 +210,7 @@
 
       <!-- third parties -->
       <!-- Lose sugar dependencies in daterangepicker plugin and remove this -->
-      <script src="libs/daterangepicker/sugar.min.js"></script>
+      <script src="libs/sugar/1.3.7/sugar.min.js"></script>
 
       <!-- init angular app -->
       <script src="js/app.js"></script>
@@ -248,7 +248,7 @@
 
       <!-- raphael -->
       <script src="libs/raphael/2.1.0/raphael-min.js"></script>
-      
+
       <!-- g-raphael -->
       <script src="libs/g-raphael/0.5.1/g.raphael-min.js"></script>
       <script src="libs/g-raphael/0.5.1/g.pie-min.js"></script>
