--- a/war/index.html
+++ b/war/index.html
@@ -69,7 +69,6 @@
             <a class="brand" href="#dashboard">WebPaige</a>
             <!-- nav-collapse -->
             <div class="nav-collapse collapse">
-
               <!-- main nav -->
               <ul class="nav">
                 <li data-match-route="/dashboard">
@@ -92,7 +91,6 @@
                 </li>
               </ul>
               <!-- end main nav -->
-
               <!-- user menu -->
               <ul class="nav pull-right">
                 <li class="dropdown">
@@ -107,7 +105,6 @@
                 </li>
               </ul>
               <!-- end user menu -->
-
             </div>
             <!-- end nav-collapse -->
           </div>
@@ -178,77 +175,67 @@
 
     </div> <!-- end browser-safe -->
 
+    <!-- REMOVE -->
+    <script src="js/_dev/testers.js"></script>
     <!-- localization -->
     <script src="js/local/language.js"></script>
-
     <!-- jquery -->
     <script src="libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     <script src="libs/jquery/jquery-browser.js"></script>
     <script src="libs/jquery/jquery-custom.js"></script>
-
     <!--[if gt IE 7]><!-->
       <!-- third parties -->
       <script src="libs/chosen/chosen.jquery.min.js"></script>
       <script src="libs/date/1.0/date.js"></script>
-
       <!-- angular -->
       <script src="libs/angular/1.0.5/angular.min.js"></script>
       <script src="libs/angular/1.0.5/angular-resource.min.js"></script>
-
       <!-- bootstrap -->
       <script src="libs/bootstrap/bootstrap.js"></script>
-
       <!-- underscore -->
       <!-- Either integrate angular-underscore library or dont use underscore in login -->
       <script src="libs/underscore/1.4.3/underscore-min.js"></script>
-
       <!-- third parties -->
       <script src="libs/chaps/timeline/2.4.0/timeline.js"></script>
       <script src="libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
       <script src="libs/bootstrap-timepicker/bootstrap-timepicker.js"></script>
       <script src="libs/daterangepicker/1.1.0/daterangepicker.js"></script>
-
       <!-- third parties -->
       <!-- Lose sugar dependencies in daterangepicker plugin and remove this -->
       <script src="libs/sugar/1.3.7/sugar.min.js"></script>
-
       <!-- init angular app -->
       <script src="js/app.js"></script>
-
       <!-- Use grunt to pre-compile all libraries -->
+      <!-- login -->
       <script src="js/controllers/login.js"></script>
-      <script src="js/models/login.js"></script>
-
+        <script src="js/models/login.js"></script>
+      <!-- dashboard -->
       <script src="js/controllers/dashboard.js"></script>
-      <script src="js/models/dashboard.js"></script>
-
+        <script src="js/models/dashboard.js"></script>
+      <!-- planboard -->
       <script src="js/controllers/planboard.js"></script>
-      <script src="js/models/planboard.js"></script>
-
+        <script src="js/models/planboard.js"></script>
+      <!-- messages -->
       <script src="js/controllers/messages.js"></script>
-      <script src="js/models/messages.js"></script>
-
+        <script src="js/models/messages.js"></script>
+      <!-- groups -->
       <script src="js/controllers/groups.js"></script>
-      <script src="js/models/groups.js"></script>
-
+        <script src="js/models/groups.js"></script>
+      <!-- profile -->
       <script src="js/controllers/profile.js"></script>
-      <script src="js/models/profile.js"></script>
-
+        <script src="js/models/profile.js"></script>
+      <!-- settings -->
       <script src="js/controllers/settings.js"></script>
-      <script src="js/models/settings.js"></script>
-      
+        <script src="js/models/settings.js"></script>
       <!-- angular services, directives and filters -->
       <script src="js/directives/directives.js"></script>
       <script src="js/services/services.js"></script>
       <script src="js/filters/filters.js"></script>
-
       <!-- angular-strap -->
       <!-- Move angularstrap into directives maybe? -->
       <script src="libs/angular-strap/0.7.0/angular-strap.min.js"></script>
-
       <!-- raphael -->
       <script src="libs/raphael/2.1.0/raphael-min.js"></script>
-
       <!-- g-raphael -->
       <script src="libs/g-raphael/0.5.1/g.raphael-min.js"></script>
       <script src="libs/g-raphael/0.5.1/g.pie-min.js"></script>
