data folder inited

--- a/war/index.html
+++ b/war/index.html
@@ -176,9 +176,9 @@
     </div> <!-- end browser-safe -->
 
     <!-- REMOVE -->
-    <script src="js/_dev/testers.js"></script>
+    <script src="js/data/testers.js"></script>
     <!-- localization -->
-    <script src="js/local/language.js"></script>
+    <script src="js/data/localization.js"></script>
     <!-- jquery -->
     <script src="libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     <script src="libs/jquery/jquery-browser.js"></script>
