fixstyles in app.js

--- a/war/index.html
+++ b/war/index.html
@@ -116,7 +116,7 @@
       <!-- loading -->
       <div id="loading" ng-show="loadingBig">
         <span class="entypo">&#9203;</span>
-        <p>{{ui.login.loading}}</p>
+        <!-- <p>{{ui.login.loading}}</p> -->
       </div>
       <!-- end loading -->
 
@@ -136,6 +136,7 @@
           <div ng-view></div>
         </div>
         <!-- end container-fluid -->
+        <div id="push"></div>
       </div>
       <!-- end wrap -->
 
