solved styling issue for notifications

--- a/war/index.html
+++ b/war/index.html
@@ -44,7 +44,7 @@
     
   </head>
   <body>
-  
+
     <!-- navbar -->
     <div class="navbar navbar-fixed-top" bs-navbar>
       <div class="navbar-inner">
@@ -110,17 +110,9 @@
 
 
     <!-- notifications -->
-     <!-- <div id="notification__" class="alert {{notification.type}}" ng-show="notification.status">
+     <div id="notification" class="alert {{notification.type}}" ng-show="notification.status">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       {{notification.message}}
-    </div> -->
-    <!-- end notifications -->
-
-    <!-- notifications -->
-     <div id="notification" class="alert alert-success">
-      <button type="button" class="close" data-dismiss="alert">&times;</button>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
     </div>
     <!-- end notifications -->
 
