popover for displaying download mobile app button

--- a/war/index.html
+++ b/war/index.html
@@ -81,6 +81,7 @@
             <!-- end main nav -->
             <!-- user menu -->
             <ul class="nav pull-right">
+              <li><a href="#help"><i class="icon-question-sign icon-white"></i> Help</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-user icon-white"></i> {{app.resources.name}} <b class="caret"></b></a>
@@ -144,7 +145,7 @@
           <!-- end ask & version -->
           <!-- download mobile app -->
           <div id="download-footer">
-            <button class="btn btn-success btn-large" type="button">
+            <button class="btn btn-success btn-large" type="button" bs-tooltip="ui.downloads.app">
               <!-- <span class="entypo">&#128241;</span> -->
               <!-- <i class="icon-download icon-white"></i> -->
               {{ui.login.downloadApp}}
