first stage in help page

--- a/war/index.html
+++ b/war/index.html
@@ -81,7 +81,7 @@
             <!-- end main nav -->
             <!-- user menu -->
             <ul class="nav pull-right">
-              <li><a href="#help"><i class="icon-question-sign icon-white"></i> Help</a></li>
+              <li><a href="#help"><i class="icon-question-sign icon-white"></i> Help & Support</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-user icon-white"></i> {{app.resources.name}} <b class="caret"></b></a>
@@ -166,7 +166,7 @@
     <!-- jquery -->
     <script src="libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     <script src="libs/jquery/jquery-browser.js"></script>
-    
+
     <!-- configs -->
     <script src="js/app-config.js"></script>
     <script src="js/app-localization.js"></script>
@@ -229,6 +229,9 @@
       <!-- settings -->
       <script src="js/controllers/settings.js"></script>
         <script src="js/models/settings.js"></script>
+
+      <!-- help -->
+      <script src="js/controllers/help.js"></script>
 
       <!-- angular services, directives and filters -->
       <script src="js/directives/directives.js"></script>
