--- a/war/browse-happy.html
+++ b/war/browse-happy.html
@@ -38,8 +38,8 @@
       <span class="entypo">&#128712;</span>
       <br><br><br><br>
       <h2>Helaas!</h2>
-      <h4>Deze browser wordt niet ondersteund. Waroom niet?</h4>
-      <p>Deze web applicatie is gebaseerd op de nieuwste technologie. Daardoor werkt deze web applicatie nog niet op alle browsers optimaal. Namelijk in oude browsers.</p><br>
+      <h4>Deze browser wordt niet ondersteund. Waarom niet?</h4>
+      <p>Deze webapplicatie is gebaseerd op de nieuwste technologie. Daardoor werkt deze applicatie nog niet optimaal in oudere browsers.</p><br>
       <p><a href="http://www.browsehappy.com/" class="btn btn-success btn-large">Installeer Een Betere Browser</a></p>
     </div>
 
