--- a/war/index.html
+++ b/war/index.html
@@ -35,12 +35,7 @@
     <script src="js/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
     <!-- fix ie related issues -->
-    <!--[if gt IE 7]>
-      <script>
-      // window.myCustomTags = [ 'yourCustomDirective', 'somebodyElsesDirective' ]; // optional
-      </script>
-      <script src="js/libs/angular-ui/0.4.0/angular-ui-ieshiv.min.js"></script>
-    <![endif]-->
+    <!--[if gt IE 7]><script src="js/libs/angular-ui/0.4.0/angular-ui-ieshiv.min.js"></script><![endif]-->
     
   </head>
   <body>
@@ -163,72 +158,54 @@
     </div>
     <!-- end footer -->
 
+
     <!-- jquery -->
-    <!-- <script src="libs/jquery/1.9.1/jquery-1.9.1.min.js"></script> -->
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="js/libs/jquery/jquery-browser.js"></script>
-
-    <!-- configs -->
-    <script src="js/config.js"></script>
+    <!-- profile configs -->
+    <script src="js/profile.js"></script>
     <script src="js/localization.js"></script>
-
     <!-- custom jquery and other stuff -->
     <script src="js/custom.js"></script>
-
     <!--[if gt IE 7]><!-->
-
-      <!-- third parties -->
-      <script src="js/libs/chosen/chosen.jquery.min.js"></script>
-      <script src="js/libs/date/1.0/date.js"></script>
-
-      <!-- angular -->
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
-      <!-- <script src="js/libs/angular/1.0.5/angular.min.js"></script> -->
-      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular-resource.min.js"></script>
-      <!-- <script src="js/libs/angular/1.0.5/angular-resource.min.js"></script> -->
-
-      <!-- bootstrap -->
-      <script src="js/libs/bootstrap/bootstrap.js"></script>
-
-      <!-- third parties -->
-      <script src="js/libs/chaps/timeline/2.4.0/timeline.js"></script>
-      <script src="js/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
-      <script src="js/libs/bootstrap-timepicker/bootstrap-timepicker.js"></script>
-      <script src="js/libs/daterangepicker/1.1.0/daterangepicker.js"></script>
-
-      <!-- third parties -->
-      <!-- Lose sugar dependencies in daterangepicker plugin and remove this -->
-      <script src="js/libs/sugar/1.3.7/sugar.min.js"></script>
-
-      <!-- init angular app -->
-      <script src="js/app.js"></script>
-
-      <!-- modules -->
-      <script src="js/modules/login.js"></script>
-      <script src="js/modules/dashboard.js"></script>
-      <script src="js/modules/planboard.js"></script>
-      <script src="js/modules/messages.js"></script>
-      <script src="js/modules/groups.js"></script>
-      <script src="js/modules/profile.js"></script>
-      <script src="js/modules/settings.js"></script>
-      <script src="js/modules/help.js"></script>
-
-      <!-- angular services, directives and filters -->
-      <script src="js/directives.js"></script>
-      <script src="js/services.js"></script>
-      <script src="js/filters.js"></script>
-
-      <!-- angular-strap -->
-      <!-- Move angularstrap into directives maybe? -->
-      <script src="js/libs/angular-strap/0.7.0/angular-strap.min.js"></script>
-
-      <!-- raphael -->
-      <script src="js/libs/raphael/2.1.0/raphael-min.js"></script>
-
-      <!-- g-raphael -->
-      <script src="js/libs/g-raphael/0.5.1/g.raphael-min.js"></script>
-      <script src="js/libs/g-raphael/0.5.1/g.pie-min.js"></script>
-      
+    <!-- third parties -->
+    <script src="js/libs/chosen/chosen.jquery.min.js"></script>
+    <script src="js/libs/date/1.0/date.js"></script>
+    <!-- angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular-resource.min.js"></script>
+    <!-- bootstrap -->
+    <script src="js/libs/bootstrap/bootstrap.js"></script>
+    <!-- third parties -->
+    <script src="js/libs/chaps/timeline/2.4.0/timeline.js"></script>
+    <script src="js/libs/bootstrap-datepicker/bootstrap-datepicker.js"></script>
+    <script src="js/libs/bootstrap-timepicker/bootstrap-timepicker.js"></script>
+    <script src="js/libs/daterangepicker/1.1.0/daterangepicker.js"></script>
+    <!-- third parties - Lose sugar dependencies in daterangepicker plugin and remove this -->
+    <script src="js/libs/sugar/1.3.7/sugar.min.js"></script>
+    <!-- init angular app -->
+    <script src="js/app.js"></script>
+    <!-- modules -->
+    <script src="js/modules/login.js"></script>
+    <script src="js/modules/dashboard.js"></script>
+    <script src="js/modules/planboard.js"></script>
+    <script src="js/modules/messages.js"></script>
+    <script src="js/modules/groups.js"></script>
+    <script src="js/modules/profile.js"></script>
+    <script src="js/modules/settings.js"></script>
+    <script src="js/modules/help.js"></script>
+    <!-- angular services, directives and filters -->
+    <script src="js/directives.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/filters.js"></script>
+    <!-- angular-strap -->
+    <!-- Move angularstrap into directives maybe? -->
+    <script src="js/libs/angular-strap/0.7.0/angular-strap.min.js"></script>
+    <!-- raphael -->
+    <script src="js/libs/raphael/2.1.0/raphael-min.js"></script>
+    <!-- g-raphael -->
+    <script src="js/libs/g-raphael/0.5.1/g.raphael-min.js"></script>
+    <script src="js/libs/g-raphael/0.5.1/g.pie-min.js"></script>
     <!--<![endif]-->
 
   </body>
