fixed issue with css a:hover and first implementation of watermarks

--- a/war/index.html
+++ b/war/index.html
@@ -152,6 +152,8 @@
     </div>
     <!-- end footer -->
 
+    <!-- <div id="watermark"></div> -->
+
     <script src="js/localization.js"></script>
     <!-- custom jquery and other stuff -->
     <script src="js/custom.js"></script>
