--- a/war/index.html
+++ b/war/index.html
@@ -28,6 +28,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="57x57" ng-href="profiles/{{config.profile.meta}}/img/ico/apple-touch-icon-57-precomposed.png">
 
     <!-- styles -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/custom.css">
     
     <!-- compability tests and css fixers -->
@@ -75,15 +77,23 @@
             <!-- end main nav -->
             <!-- user menu -->
             <ul class="nav pull-right">
-              <li><a href="#help"><i class="icon-question-sign icon-white"></i> Help & Support</a></li>
+              <li>
+                <a href="#help"><i class="icon-question-sign icon-white"></i> Help & Support</a>
+              </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-user icon-white"></i> {{app.resources.name}} <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#profile"><i class="icon-user"></i> {{ui.profile.profile}}</a></li>
-                  <li><a href="#settings"><i class="icon-cog"></i> {{ui.settings.settings}}</a></li>
+                  <li>
+                    <a href="#profile"><i class="icon-user"></i> {{ui.profile.profile}}</a>
+                  </li>
+                  <li>
+                    <a href="#settings"><i class="icon-cog"></i> {{ui.settings.settings}}</a>
+                  </li>
                   <li class="divider"></li>
-                  <li><a href="#logout"><i class="icon-off"></i> {{ui.login.logout}}</a></li>
+                  <li>
+                    <a href="#logout"><i class="icon-off"></i> {{ui.login.logout}}</a>
+                  </li>
                 </ul>
               </li>
             </ul>
