dashboard more optimized & toggler for announcements list

--- a/war/index.html
+++ b/war/index.html
@@ -14,7 +14,8 @@
     <meta name="viewport" content="width=device-width">
 
     <!-- jquery -->
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> -->
+    <script src="js/libs/jquery/1.9.1/jquery-1.9.1.min.js"></script>
     <script src="js/libs/jquery/jquery-browser.js"></script>
 
     <!-- profile configs -->
@@ -174,8 +175,10 @@
     <script src="js/libs/chosen/chosen.jquery.min.js"></script>
     <script src="js/libs/date/1.0/date.js"></script>
     <!-- angular -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular-resource.min.js"></script>
+    <script src="js/libs/angular/1.0.5/angular.min.js"></script>
+    <script src="js/libs/angular/1.0.5/angular-resource.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular-resource.min.js"></script> -->
     <!-- bootstrap -->
     <script src="js/libs/bootstrap/bootstrap.js"></script>
     <!-- third parties -->
